--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -15,9 +21,8 @@
   padding-bottom: 40px;
 }
 
-.search-input {
+.input {
   background: #FFFFFF;
-  background-image: url(../images/home.svg);
   background-repeat: no-repeat;
   background-position: left 11px center;
   border: 1px solid #D9D9D9;
@@ -27,7 +32,16 @@
   color: #BFBFBF;
   padding-left: 32px;
   height: 40px;
+}
+
+.input-adress {
+  background-image: url(../images/home.svg);
   width: 690px;
+}
+
+.input-search {
+  background-image: url(../images/search.svg);
+  width: 306px;
 }
 
 .buttons {
@@ -54,6 +68,136 @@
   color: #fff;
   margin-right: 10px;
 }
+
 .button-img {
   margin-right: 5px;
+}
+
+.promo {
+  padding: 68px 70px;
+  box-shadow: (0px 7px 12px rgba(158, 158, 163, 0.1));
+  background: #fff1b8;
+  background-image: url(../images/promo-img.png);
+  background-repeat: no-repeat;
+  background-position: top 10px right -350px;
+  border-radius: 10px;
+}
+
+.promo-title {
+  font-weight: bold;
+  font-size: 39px;
+  line-height: 46px;
+  color: #302C34;
+  max-width: 450px;
+}
+
+.promo-text {
+  font-size: 24px;
+  line-height: 28px;
+  color: #302C34;
+  max-width: 508px;
+  margin-top: 15px;
+}
+
+.restaurants {
+  padding-top: 56px;
+}
+
+.restaurants-heading {
+  display: flex;
+  justify-content: space-between;
+}
+
+.restaurants-heading__title {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+  color: #000000;
+  margin-bottom: 44px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.card {
+  background: #FFFFFF;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05);
+  border-radius: 7px;
+  margin-bottom: 30px;
+}
+
+.card-img {
+  border-radius: 7px 7px 0px 0px;
+  object-fit: cover;
+}
+
+.card-text {
+  padding: 20px 23px 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.card-info {
+  display: flex;
+}
+
+.card-title {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 32px;
+  color: #000000;
+}
+
+.card-tag {
+  padding: 1px 8px;
+  background: #262626;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 20px;
+  align-items: center;
+  color: #FFFFFF;
+  max-height: 22px;
+  border-radius: 2px;
+}
+
+.raiting {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 32px;
+  color: #FFC107;
+  margin-right: 26px;
+}
+
+.price,
+.category {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 32px;
+  color: #8C8C8C;
+}
+
+.price {
+  margin-right: 10px;
+}
+
+.price::after {
+  content: "";
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  background: #8C8C8C;
+  border-radius: 50%;
+  margin-left: 10px;
+  vertical-align: middle;
 }
